Prevent overflow in invite detail items

--- a/client/my-sites/people/people-invite-details/style.scss
+++ b/client/my-sites/people/people-invite-details/style.scss
@@ -11,6 +11,9 @@
 .people-invite-details__meta-item {
 	margin-bottom: 12px;
 	color: $gray-text-min;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 
 	.people-invite-details__meta-item-label {
 		display: inline-block;
